[project]
name = "dg-query-disambiguation-docs"
version = "0.1.0"
description = "Documentation for the Query Disambiguation Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=8.5.10", 
    "mkdocstrings[python]>=0.26.1", 
    "mkdocs>=1.6.1", 
    "mike>=2.1.3", 
    "neoteroi-mkdocs>=1.1.3", 
    "pymdown-extensions>=10.14.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]